<resources>
    <!-- ... -->
    <string name="facebook_application_id" translatable="false">APP_ID</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fbAPP_ID</string>
    <string name="app_name">OyunMerkezi</string>
    <string name="hello_filter_fragment">Hello filter fragment</string>
    <string name="filter">filter</string>
    <string name="order">order</string>
    <string name="language">language</string>
    <string name="fragment_language_label">language</string>
    <string name="fragment_order_by_label">order by</string>
    <string name="fragment_filter_label">filter</string>
    <string name="hello_order_fragment">hello order fragment</string>
    <string name="hello_detial_fragment">hello detail fragment</string>
    <string name="hello_language_fragment">hello language fragment</string>
    <string name="about_us">about us</string>
    <string name="our_location">our location</string>
    <string name="our_products">our products</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_video">game video</string>
    <string name="api_key">gfgd</string>
    <string name="alphabetic">A--Z</string>
    <string name="alphabetic_re">Z--A</string>
    <string name="newer">new to old</string>
    <string name="older">old to new</string>
    <string name="hours">long to short</string>
    <string name="hours_re">short to long</string>
    <string name="expensive">higher price</string>
    <string name="cheap">lower price</string>
    <string name="order_by">order by</string>
    <string name="high_rate">high rate</string>
    <string name="price">price:</string>
    <string name="minimum">minimum</string>
    <string name="maximum">maximum</string>
    <string name="age">age:</string>
    <string name="age3">18</string>
    <string name="hours2">hours:</string>
    <string name="players">players:</string>
    <string name="players_">2</string>
    <string name="offline">only offline</string>
    <string name="in_stock">in stock</string>
    <string name="favorite">my favorite</string>
    <string name="week">last week</string>
    <string name="month">last month</string>
    <string name="year">last year</string>
    <string name="publishing">publish date</string>
    <string name="apply">apply</string>
    <string name="game_category">Game Category</string>
    <string name="game_language">Game Language</string>
    <string name="game_oder">Games Order</string>
    <string name="reset">Reset</string>
    <string name="platforms">platforms</string>
    <string name="PS3" translatable="false">PS3</string>
    <string name="PS4" translatable="false">PS4</string>
    <string name="PS5" translatable="false">PS5</string>
    <string name="XBoxOne" translatable="false">XBox One</string>
    <string name="XBoxX" translatable="false">XBox X</string>
    <string name="XBoxX_Added">XBox X Added</string>
    <string name="XBoxX_Removed">XBox X Removed</string>
    <string name="PS3_Removed">PS3 Removed</string>
    <string name="PS3_Added">PS3 Added</string>
    <string name="PS4_Removed">PS4 Removed</string>
    <string name="PS4_Added">PS4 Added</string>
    <string name="PS5_Removed">PS5 Removed</string>
    <string name="PS5_Added">PS5 Added</string>
    <string name="XBoxOne_Removed">XBox One Removed</string>
    <string name="XBoxOne_Added">XBox One Added</string>
    <string name="summary">Summary</string>
    <string name="search">search</string>
    <string name="send">send</string>
    <string name="title_activity_comment">CommentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete">delete</string>
    <string name="title_activity_good">GoodActivity</string>
    <string name="internet_status">internet status</string>
    <string name="stock_status">stock status</string>
    <string name="chose_min_rating">chose minmum rate</string>
</resources>